--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "axios": "^0.20.0",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "swr": "^0.3.1"
+    "swr": "^0.3.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "@types/yup": "^0.29.6",
     "sass": "^1.26.10",
     "typescript": "4.0"
   },
