--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazy-images": "^1.1.0",
     "swr": "^0.3.1",
     "yup": "^0.29.3"
   },
